--- a/index.html
+++ b/index.html
@@ -1,13 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
-  </head>
+<head>
+  <meta charset="UTF-8"/>
+  <link rel="icon" type="image/svg+xml" href="/vite.svg"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Vite + React</title>
+
+  <!-- ===============================================-->
+  <!--    Stylesheets-->
+  <!-- ===============================================-->
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,500,600,700%7cPoppins:300,400,500,600,700,800,900&amp;display=swap"
+        rel="stylesheet">
+  <link href="src/assets/css/OverlayScrollbars.min.css" rel="stylesheet">
+  <link href="src/assets/css/theme-rtl.min.css" rel="stylesheet" id="style-rtl">
+  <link href="src/assets/css/theme.min.css" rel="stylesheet" id="style-default">
+  <link href="src/assets/css/user-rtl.min.css" rel="stylesheet" id="user-style-rtl">
+  <link href="src/assets/css/user.min.css" rel="stylesheet" id="user-style-default">
+  <!-- ===============================================-->
+  <!--    End Stylesheets-->
+  <!-- ===============================================-->
+
+
+  <!--    Para el tema del color -->
+  <script>
+    var isRTL = JSON.parse(localStorage.getItem('isRTL'));
+    if (isRTL) {
+      var linkDefault = document.getElementById('style-default');
+      var userLinkDefault = document.getElementById('user-style-default');
+      linkDefault.setAttribute('disabled', true);
+      userLinkDefault.setAttribute('disabled', true);
+      document.querySelector('html').setAttribute('dir', 'rtl');
+    } else {
+      var linkRTL = document.getElementById('style-rtl');
+      var userLinkRTL = document.getElementById('user-style-rtl');
+      linkRTL.setAttribute('disabled', true);
+      userLinkRTL.setAttribute('disabled', true);
+    }
+  </script>
+
+</head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+
+
+    <!-- ===============================================-->
+    <!--    JavaScripts-->
+    <!-- ===============================================-->
+    <script src="src/assets/js/popper.min.js"></script>
+    <script src="src/assets/js/bootstrap.min.js"></script>
+    <script src="src/assets/js/anchor.min.js"></script>
+    <script src="src/assets/js/is.min.js"></script>
+    <script src="src/assets/js/all.min.js"></script>
+    <script src="src/assets/js/lodash.min.js"></script>
+    <script src="https://polyfill.io/v3/polyfill.min.js?features=window.scroll"></script>
+    <script src="src/assets/js/list.min.js"></script>
+    <script src="src/assets/js/theme.js"></script>
   </body>
 </html>
